Pictures for the presentation

--- a/Presentation/Presentation_CMEB.tex
+++ b/Presentation/Presentation_CMEB.tex
@@ -1,5 +1,5 @@
 \documentclass{beamer}
-\usetheme{Madrid}
+\usetheme{Berlin}
 
 
 \title{Retinal Hemodynamics}
@@ -11,10 +11,23 @@
 \begin{document}
 
 \begin{frame}
-	\titlepage
+\titlepage
 \end{frame}
 
+\section{The model}
+
 \begin{frame}
+\frametitle{Anatomy of the eye}
+\end{frame}
+
+\section{The code}
+\begin{frame}
+\frametitle{Code}
+\end{frame}
+
+\section{The results}
+\begin{frame}
+\frametitle{Results}
 \end{frame}
 
 
