--- a/Presentation/sample.bib
+++ b/Presentation/sample.bib
@@ -49,3 +49,11 @@
 	school = {Medical University of Vienna},
 	year ={2017},
 }
+
+@inbook{Duker,
+	title = {Trattato di Oftalmologia},
+	author = {J.S. Duker and M. Yanoff},
+	chapter = {anatomia e fisiologia: circolazione retinica e coroideale},
+	publisher = {Saunders},
+	year = {2013},
+}
